# ZetaForge

./: .gitignore  .gitlab-ci.yaml  CONTRIBUTING.md  README.md  README_INSTALLATION.md  README_PYPI.md  app.py  config.json  credentials.go  deploy_app.py  entrypoint.py  executor.go  go.mod  go.sum  main.go  mixpanelUtilities.go  mkdocs.yml  package.json  project.toml  pyproject.toml  query.go  requirements.txt  setup.go  setup.py  sqlc.yaml  test_file.py  token.go  translator.go  triggers.go  websocket.go
JavaScript-API-Package/: .gitignore  README.md  index.js  package.json
Katana/: README.MD  entrypoint.py  go.mod  main.go  schema.go
anvil/: config.json  entrypoint.py  errors.go  executor.go  go.sum  main.go  on-prem.yaml  setup.go  translator.go  websocket.go
backup_frontend/: index.html
docs/: README.md  assemble-a-pipeline.md  contribute.md  contributing.md  create-blocks.md  deploy-a-pipeline.md  disabling-sbom.md  gallery.md  index.md  installation.md  introduction.md  run-a-pipeline.md  run-your-first-pipeline.md  share-a-pipeline.md  user-interface.md  view-executed-pipelines.md
frontend/: .env  .env.production  .eslintrc.json  .prettierignore  config.js  electron-builder.json5  eslint.config.js  index.html  launch.command  macPacker.cjs  next.config.js  package-lock.json  package.json  prettier.config.js  server.mjs  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1709853353702-361310607e8c.mjs  vitest.config.ts
iargo/: workflow.go
oargo/: workflow.go
pip-package/: README.md  project.toml  setup.py
setup/: build.yaml  (+1 more)
(+841 files in other folders)
