[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"



[project]
name = "zetaforge"
authors = [
    {name="Zetane", email="info@zetane.com"}
]
dynamic = ["version"]
description = "zetaforge installer"
readme = "README_PYPI.md"
dependencies = [
        "setuptools==69.0.2",
        "requests==2.31.0", 
        "boto3==1.34.79", 
        "colorama==0.4.6", 
        "mixpanel==4.10.1", 
        "langchain==0.1.15", 
        "langchain-openai==0.1.2",
        "sentry-sdk===2.0.1",
        "yaspin"
    ]

requires-python = ">=3.10"

[project.scripts]
zetaforge = "zetaforge.forge_cli:main"

